# NovaForge-Project

./: .gitignore  ARCHITECTURE.md  BUILD_RULES.md  CONTENT_RULES.md  PROJECT_RULES.md  README.md  ROADMAP.md  TASKS.md  novaforge.project.json
NovaForge/App/: CMakeLists.txt
NovaForge/App/Bootstrap/: WorldBootstrap.cpp
NovaForge/App/include/: App.h  NovaForgeSession.h
NovaForge/App/src/: DataRegistry.cpp  NovaForgeApp_stub.cpp  NovaForgeBootstrap.cpp  NovaForgeProjectContext.cpp
NovaForge/Client/: CMakeLists.txt  build_network_standalone.sh  build_test_instanced.sh  build_test_lighting.sh  build_test_phase48.sh  build_test_shadow.sh  extract_reference_models.sh
NovaForge/Client/App/assets/: README.txt
NovaForge/Client/App/shaders/: bright_pass.frag  downsample.frag  entity.vert  gbuffer_geometry.frag  gbuffer_lighting.vert  healthbar.frag  multi_light.vert  multi_light_shadow.frag  nebula.vert  overlay.frag  particle.vert  starfield.frag  starmap.frag  warp_tunnel.frag
NovaForge/Client/include/characters/: fps_hand_system.h
NovaForge/Client/include/editor/: animation_editor_tool.h  batch_operations_tool.h  camera_view_tool.h  environment_control_tool.h  function_assignment_tool.h  material_shader_tool.h  resource_balancer_tool.h  script_console.h
NovaForge/Client/include/network/: protocol_handler.h
NovaForge/Client/include/rendering/: instanced_renderer.h  post_processing.h  procedural_mesh_ops.h  procedural_ship_generator.h  reference_model_analyzer.h  resolution_manager.h  station_renderer.h  window.h
NovaForge/Client/include/ui/: entity_picker.h  space_colors.h  star_map.h
NovaForge/Client/src/characters/: character_animation_system.cpp
NovaForge/Client/src/core/: application_movement.cpp  application_rendering.cpp  entity_manager.cpp  session_manager.cpp  ship_physics.cpp
NovaForge/Client/src/editor/: editor_event_bus.cpp  undoable_command_bus.cpp
NovaForge/Client/src/rendering/: asteroid_field_renderer.cpp  gbuffer.cpp  model.cpp  post_processing.cpp  resolution_manager.cpp
NovaForge/Client/src/ui/: entity_picker.cpp  layout_manager.cpp
NovaForge/Client/tests/: test_entity_sync.cpp  test_instanced_rendering.cpp  test_layout_manager.cpp  test_lighting.cpp  test_obj_reference_models.cpp  test_texture_loading.cpp
NovaForge/EditorTools/: AssetStylePanel.h  CMakeLists.txt  CharacterSelectPanel.cpp  CombatLogPanel.cpp  CombatLogPanel.h  FleetFormationPanel.cpp  InsuranceOverviewPanel.h  LiveSceneManager.cpp  LiveSceneManager.h  ModelImportPanel.cpp  ModuleEditorPanel.cpp  NPCEditorPanel.h  PCGOverrideStore.cpp  PhysicsTunerPanel.cpp  PhysicsTunerPanel.h  SceneGraphPanel.cpp  ShipArchetypePanel.cpp  ShipArchetypePanel.h  SolarSystemEditorPanel.cpp  StationEditorPanel.cpp  TradeRoutePanel.cpp  TradeRoutePanel.h
NovaForge/Save/: CMakeLists.txt
NovaForge/Save/src/: SaveManager.cpp
NovaForge/Shared/NovaForgeShared/: CMakeLists.txt
NovaForge/Tools/: CMakeLists.txt
NovaForge/Tools/AIDev/: README.md
NovaForge/Tools/AIDev/core/: agent_loop.py  llm_interface.py  prompt_templates.py
NovaForge/Tools/AIDev/plugins/: README.md
NovaForge/Tools/AIDev/tests/: test_agent_loop.py  test_hot_reload.py  test_prompt_templates.py
NovaForge/Tools/AIDev/tools/: build_runner.py  ecs_scaffold.py  file_ops.py  git_ops.py  ipc_bridge.py  media_pipeline.py  pcg_learner.py  stable_diffusion_interface.py  versioning.py  video_pipeline.py  zip_tools.py
NovaForge/Tools/GameTools/: README.md  create_ship.py  validate_json.py
NovaForge/Tools/GameTools/BlenderSpaceshipGenerator/: EXAMPLES.md  NOVAFORGE_PLAN.md  TECHNICAL.md  __init__.py  animation_system.py  asteroid_generator.py  damage_system.py  features.md  fleet_logistics.py  lighting_system.py  package.py  (+5 more)
NovaForge/UI/: CMakeLists.txt
NovaForge/UI/include/: RuntimeUIShell.h
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/: CMakeLists.txt
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Client/: build_starmap_demo.sh  build_test.sh  build_test_asteroid.sh  build_test_enhanced_ui.sh  build_test_entity_sync.sh  build_test_network.sh  build_test_phase46.sh  build_test_post_processing.sh  build_test_responses.sh  build_test_texture.sh  verify_dependencies.sh
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Config/: rig_default_loadout.json
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Data/: editor_layout_editmode.json
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Docs/: ATLAS_INTEGRATION.md  BUILDING.md  CODING_GUIDELINES.md  DEVELOPMENT_GUIDANCE.md  EVE_MANUAL_REFERENCE.md  GUI_ARCHITECTURE.md  IMPLEMENTATIONS_ROADMAP.md  MODDING_GUIDE.md  MODULAR_SHIP_GENERATION_USAGE.md  NAMING_CONVENTION.md  PROCEDURAL_SHIP_GENERATION_SUMMARY.md  REFACTORING_PLAN.md  SCALE_AND_DETAIL_SYSTEM.md  SHIP_MODELING.md
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/EditorTools/: AssetPalettePanel.cpp  AssetPalettePanel.h  AssetStylePanel.cpp  CharacterSelectPanel.h  ColonyManagerPanel.cpp  ColonyManagerPanel.h  DataBrowserPanel.cpp  DataBrowserPanel.h  FleetFormationPanel.h  GalaxyMapPanel.cpp  GalaxyMapPanel.h  GamePackagerPanel.cpp  GamePackagerPanel.h  GenerationStylePanel.cpp  GenerationStylePanel.h  InsuranceOverviewPanel.cpp  MissionEditorPanel.cpp  MissionEditorPanel.h  ModelImportPanel.h  ModuleEditorPanel.h  NPCEditorPanel.cpp  PCGOverrideStore.h  PCGPreviewPanel.cpp  PCGPreviewPanel.h  SceneGraphPanel.h  SolarSystemEditorPanel.h  StationEditorPanel.h  ViewportPanel.cpp  ViewportPanel.h
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Gameplay/: CMakeLists.txt
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Interaction/: LootContainerInteractable.cs
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Inventory/: QuickSlotService.cs
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Player/: RigBootstrapService.cs
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Repair/: RepairActionService.cs
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Runtime/: main.cpp
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/SaveLoad/: CombatRepairSaveState.cs  RigSaveState.cs
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/Server/: CMakeLists.txt  build.sh  run_tests.sh  server_config.schema.json
_EXTRACT_TO_NOVAFORGE_REPO/NovaForge/World/: CMakeLists.txt  World.h
(+2935 files in other folders)
